[package]
name = "owned-read"
version = "0.4.1"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
categories = []
description = """Wraps your `Deref<Target=[u8]>` into a `io::Read`."""
homepage = "https://github.com/tantivy-search/owned-read"
repository = "https://github.com/tantivy-search/owned-read"
readme = "README.md"
keywords = []
edition = "2018"

[dependencies]
stable_deref_trait = {version="1", default-features = false}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

